--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -5,6 +5,7 @@
 //= require pickadate/default.time
 @import 'bourbon';
 @import './grid';
+@import './dragula';
 
 // VENDOR OVERRIDE
 @import './vendor/pickadate/default.date';
