--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -60,6 +60,7 @@
 @import './modules/app-info';
 @import './modules/asset-cropping';
 @import './modules/asset-field';
+@import './modules/back-button';
 @import './modules/breadcrumbs';
 @import './modules/btn';
 @import './modules/burger';
@@ -90,10 +91,9 @@
 @import './modules/tabs';
 @import './modules/tn-tc';
 @import './modules/tn-tc-fields';
+@import './modules/tn-tc-library';
 @import './modules/tn-tc-row';
-// @import './modules/tn-content';  // bem: todo
 @import './modules/tn-embed-code';  // bem: todo
-@import './modules/tn-tc-library';  // bem: todo
 @import './modules/toolbar';
 @import './modules/util-nav';
 
