--- a/app/assets/stylesheets/tenon/modules/tn-tc-row.scss
+++ b/app/assets/stylesheets/tenon/modules/tn-tc-row.scss
@@ -7,8 +7,7 @@
   overflow: hidden;
 }
 
-.tn-tc-row__top-bar,
-.tn-tc-row__bottom-bar {
+.tn-tc-row__top-bar {
   @include default-transition;
   position: relative;
   opacity: 0;
@@ -16,14 +15,12 @@
   text-align: right;
   color: $primary-fg-color;
 
-  .tn-tc-row:hover & {
+  // Keep visible when hovering or dragging the row
+  .tn-tc-row:hover &,
+  .gu-transit &,
+  .gu-mirror & {
     opacity: 1;
   }
-}
-
-.tn-tc-row__bottom-bar {
-  display: none;
-  text-align: center;
 }
 
 .tn-tc-row__action {
