--- a/app/assets/stylesheets/tenon/mixins/font-styles.scss
+++ b/app/assets/stylesheets/tenon/mixins/font-styles.scss
@@ -2,7 +2,7 @@
   @for $i from 1 through 9 {
     %font-n#{$i} {
       font-weight: #{$i*100};
-      font-style: normal;
+      font-style: inherit;
     }
 
     .font-n#{$i} {
