Better mobile menus

--- a/app/views/tenon/shared/_default_form_toolbar.html.haml
+++ b/app/views/tenon/shared/_default_form_toolbar.html.haml
@@ -11,7 +11,7 @@
           %button.btn.btn--toolbar.submit{ data: { disable_with: "Please wait..." } } Save
 
       .toolbar__action
-        %a.toolbar__action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+        %a.toolbar__action-icon.dropdown-button{ href: '#!', data: { dropdown_activate: true } }
           = i('more_vert')
 
         %ul.dropdown#form-dropdown
