--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -1,5 +1,5 @@
 .util-nav{ class: (modifier if local_assigns[:modifier]) }
-  = link_to '#!', class: 'util-nav__action-icon dropdown-button', data: { activates: 'account-dropdown'} do
+  = link_to '#!', class: 'util-nav__action-icon dropdown-button', data: { dropdown_activate: true } do
     .action-icon= i('person')
 
   %ul.dropdown#account-dropdown
