--- a/app/assets/stylesheets/tenon/variables/layout.scss
+++ b/app/assets/stylesheets/tenon/variables/layout.scss
@@ -4,6 +4,7 @@ $default-spacing: 30px;
 $dropdown-item-height: 40px;
 $main-nav-width: 260px;
 $main-nav-logo-height: 30px;
+$main-nav-avatar-size: 38px;
 $toolbar-height: 70px;
 $util-nav-height: 60px;
 $util-nav-width: 54px;
