--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -2,9 +2,4 @@
   = link_to '#!', class: 'util-nav__action-icon dropdown-button', data: { dropdown_activate: true } do
     .action-icon= i('person')
 
-  %ul.dropdown#account-dropdown
-    %li.dropdown__divider
-    %li.dropdown__item
-      = active_link_to destroy_user_session_path, method: :delete, class: 'dropdown__action action-icon' do
-        = i('exit_to_app')
-        %span Logout
+  = render 'tenon/shared/account_dropdown'
