Import tenon_addons for CSS

--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -99,3 +99,6 @@
 
 // Backwards Compatibility (should be temporary)
 @import './backwards_compatibility/variables';
+
+// Addons
+@import 'tenon_addons';
