--- a/app/assets/stylesheets/tenon/modules/toolbar.scss
+++ b/app/assets/stylesheets/tenon/modules/toolbar.scss
@@ -17,7 +17,7 @@
 
   @include bp-md {
     margin: 0 auto;
-    width: calc(100% - 500px);
+    width: calc(100% - #{($main-nav-width + $default-spacing) * 2});
   }
 }
 
