--- a/app/assets/stylesheets/tenon/variables/colors-named.scss
+++ b/app/assets/stylesheets/tenon/variables/colors-named.scss
@@ -32,6 +32,7 @@ $body-bg-color: lighten($grey, 25%);
 $panel-bg-color: $white;
 $contrast-bg-color: $grey;
 $light-border-color: lighten($grey, 10%);
+$lighter-border-color: lighten($grey, 20%);
 $dark-border-color: $grey;
 $hr-bg-color: lighten($grey, 20%);
 $modal-bg-color: $white;
