Minor style edits

--- a/app/assets/stylesheets/tenon/modules/main-nav-drawer.scss
+++ b/app/assets/stylesheets/tenon/modules/main-nav-drawer.scss
@@ -95,7 +95,7 @@
 // sub-nav toggle
 .main-nav__link-toggle {
   position: absolute;
-  top: $default-spacing / 4;
+  top: 12px;
   right: $default-spacing / 2;
 }
 
