--- a/app/views/layouts/tenon/application.html.haml
+++ b/app/views/layouts/tenon/application.html.haml
@@ -10,15 +10,9 @@
       = @page_title + " | " if @page_title
       = Tenon::MySettings.site_title.present? ? Tenon::MySettings.site_title : 'Tenon'
 
-    = stylesheet_link_tag '//fonts.googleapis.com/icon?family=Material+Icons'
-    = javascript_include_tag '/ckeditor/ckeditor'
-    = javascript_include_tag 'tenon/application'
-    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'
-    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/pickadate.js/3.5.6/compressed/picker.js'
-    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/pickadate.js/3.5.6/compressed/picker.date.js'
-    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/pickadate.js/3.5.6/compressed/picker.time.js'
-    - if Rails.env.development?
-      = javascript_include_tag 'http://localhost:9999/bundle.js'
+    = yield :pre_scripts
+    = render 'tenon/shared/assets'
+    = yield :post_scripts
 
   %body{data: { controller: params[:controller], action: params[:action] } }
     = flash_messages
