Fix scaffold generator and generated index view

--- a/lib/generators/tenon/scaffold/templates/view_index.html.haml
+++ b/lib/generators/tenon/scaffold/templates/view_index.html.haml
@@ -1,4 +1,4 @@
-= react_component 'ResourceIndexRoot',
+= react_component 'Tenon.RI.Root',
     title: '<%= plural_name.titleize %>',
     breadcrumbs: breadcrumb_links,
     recordsPath: <%= plural_name %>_path(format: 'json'),
